feat: update Google Maps API key usage in HTML files to use environment variable

--- a/scripts/downloaded_tasks/html/task_nubu.html
+++ b/scripts/downloaded_tasks/html/task_nubu.html
@@ -165,7 +165,7 @@
       }
     </script>
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNzQ3bEL1qyeQbK73MofgzweHZakXpFJQ&sensor=false&callback=initMap"></script>
+      src="https://maps.googleapis.com/maps/api/js?key=${GOOGLE_MAP_KEY}&sensor=false&callback=initMap"></script>
   </div>
 </body>
 
