--- a/scripts/downloaded_tasks/html_cleaned/task_luma.html
+++ b/scripts/downloaded_tasks/html_cleaned/task_luma.html
@@ -173,7 +173,7 @@
       }
     </script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNzQ3bEL1qyeQbK73MofgzweHZakXpFJQ&sensor=false&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=${GOOGLE_MAP_KEY}&sensor=false&callback=initMap"
       type="text/javascript"></script>
   </div>
 </body>
